--- a/02-pagesProject/templates/home.html
+++ b/02-pagesProject/templates/home.html
@@ -11,6 +11,7 @@
 {% block content %}
     <h1>Bosh sahifa</h1>
     <p>Xush kelibsiz!</p>
+    <p>Jyhfas kascabscjh</p>
 {% endblock content %}
 </body>
 </html>
